added loothurbox self delete, modified some test envi, upgrade now has a basic animation before disappearing

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Components/Characters/player/Player.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/parkour_testV1.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://Components/", "res://Components/Objects/", "res://Components/Objects/weapon_manager/", "res://Components/Objects/weapon_manager/sword/", "res://Components/Objects/weapon_manager/Animations/", "res://Components/Objects/Upgrades/", "res://Components/Objects/Upgrades/GhostArm/", "res://Components/Characters/", "res://Components/Characters/player/", "res://assets/Models/", "res://assets/Materials/")
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
@@ -34,17 +34,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Components/Objects/weapon_manager/WeaponManager.tscn", "res://Components/Characters/NPCs/Dummy/Dummy.tscn", "res://scenes/game.tscn", "res://Components/Objects/weapon_manager/weaponHurtbox.tscn", "res://Components/Characters/player/Player.tscn", "res://Components/Objects/weapon_manager/sword/sword.tscn", "res://Components/Objects/Upgrades/Upgrade.tscn", "res://Components/Objects/Upgrades/GhostArm/GhostArm.tscn")
-current_scene="res://Components/Objects/Upgrades/GhostArm/GhostArm.tscn"
+open_scenes=PackedStringArray("res://Components/Objects/weapon_manager/WeaponManager.tscn", "res://Components/Characters/NPCs/Dummy/Dummy.tscn", "res://scenes/game.tscn", "res://Components/Objects/weapon_manager/weaponHurtbox.tscn", "res://Components/Characters/player/Player.tscn", "res://Components/Objects/weapon_manager/sword/sword.tscn", "res://Components/Objects/Upgrades/Upgrade.tscn", "res://Components/Objects/Upgrades/GhostArm/GhostArm.tscn", "res://scenes/parkour_testV1.tscn")
+current_scene="res://Components/Characters/NPCs/Dummy/Dummy.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=3
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Components/Objects/weapon_manager/Attack.gd", "res://Components/Objects/Upgrades/base_upgrade.gd", "res://Components/Characters/NPCs/Dummy/dummy.gd", "res://scenes/game.gd", "res://Components/Objects/Upgrades/GhostArm/ghostarm_upgrade.gd", "res://Components/Objects/Upgrades/GhostArm/ghost_arm.gd", "res://Components/Characters/health_component.gd", "res://Components/Characters/hitbox_component.gd", "res://Components/Objects/Upgrades/lootHurtbox.gd", "res://Components/Objects/weapon_manager/Animations/model_anim.gd", "res://Components/Characters/player/movement.gd", "res://Components/Characters/player/player.gd", "res://Components/Objects/Upgrades/upgrade.gd", "res://Components/Objects/weapon_manager/weapon.gd", "res://Components/Objects/weapon_manager/weapon_hurtbox.gd", "res://Components/Objects/weapon_manager/weapon_manager.gd", "res://Components/Objects/weapon_manager/weapon_resource.gd", "res://Components/Objects/weapon_manager/weapon_type.gd"]
-selected_script="res://Components/Objects/weapon_manager/weapon_manager.gd"
+selected_script="res://Components/Characters/NPCs/Dummy/dummy.gd"
 open_help=["@GDScript", "@GlobalScope", "bool", "CharacterBody3D", "CollisionObject3D", "float", "GDScript", "Input", "InputEventMouseButton", "Mesh", "Node", "Node3D", "Object", "PackedScene", "Resource", "SceneTree", "SceneTreeTimer", "SpringArm3D", "String", "Variant", "Vector3", "VisualInstance3D"]
 script_split_offset=210
 list_split_offset=0
@@ -75,5 +75,5 @@ position=Vector2i(1920, 23)
 
 [GameView]
 
-floating_window_rect=Rect2i(2298, 155, 1164, 695)
+floating_window_rect=Rect2i(1920, 23, 1920, 1017)
 floating_window_screen=1
