--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 6,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 11,
+"selection_from_line": 6,
+"selection_to_column": 12,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,16 +21,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 5,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 31,
-"selection_from_line": 3,
-"selection_to_column": 46,
-"selection_to_line": 3,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,11 +35,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 6.0,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,16 +49,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 37,
-"scroll_position": 30.0,
+"row": 115,
+"scroll_position": 114.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 37,
-"selection_to_column": 20,
-"selection_to_line": 37,
+"selection_from_column": 15,
+"selection_from_line": 115,
+"selection_to_column": 26,
+"selection_to_line": 115,
 "syntax_highlighter": "GDScript"
 }
 
@@ -67,16 +67,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 14,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 9,
-"selection_to_column": 20,
-"selection_to_line": 9,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -120,8 +116,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 18.0,
+"row": 5,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -131,10 +127,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -195,7 +191,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 55,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
@@ -213,10 +209,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 12,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -245,12 +241,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 52,
+"column": 7,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 3,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 3,
+"selection_to_column": 7,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
@@ -277,12 +277,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 12,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 30,
+"selection_from_line": 10,
+"selection_to_column": 0,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
@@ -291,11 +295,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 37,
-"scroll_position": 15.0,
+"row": 14,
+"scroll_position": 3.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Components/Characters/NPCs/Dummy/body_animation.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
