cleaned up and separate code better

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -15,6 +15,22 @@ list=[{
 "language": &"GDScript",
 "path": "res://Components/Objects/Upgrades/base_upgrade.gd"
 }, {
+"base": &"CharacterBody3D",
+"class": &"Character",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Components/Characters/Character.gd"
+}, {
+"base": &"Character",
+"class": &"Ennemy",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Components/Characters/NPCs/Ennemy1/ennemy_1.gd"
+}, {
 "base": &"BasePlayerUpgrade",
 "class": &"GhostArmUpgrade",
 "icon": "",
@@ -47,6 +63,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Components/Objects/Upgrades/lootHurtbox.gd"
 }, {
+"base": &"Weapon",
+"class": &"MeleeWeapon",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Components/Objects/weapon_manager/MeleeWeapon.gd"
+}, {
 "base": &"Node",
 "class": &"MovementController",
 "icon": "",
@@ -55,7 +79,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://Components/Characters/player/movement.gd"
 }, {
-"base": &"CharacterBody3D",
+"base": &"Character",
 "class": &"Player",
 "icon": "",
 "is_abstract": false,
@@ -69,7 +93,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Components/Objects/weapon_manager/weapon.gd"
+"path": "res://Components/Objects/weapon_manager/Weapon.gd"
 }, {
 "base": &"Node",
 "class": &"WeaponHurtbox",
