added first ai enemy

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Components/Objects/Upgrades/GhostArm/ghostarm_upgrade.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://Components/", "res://Components/Objects/", "res://Components/Objects/weapon_manager/", "res://Components/Objects/weapon_manager/Bow/", "res://Components/Objects/Upgrades/", "res://Components/Objects/Upgrades/GhostArm/", "res://Components/Characters/player/", "res://Components/Characters/NPCs/Ennemy1/", "res://assets/Models/", "res://assets/Materials/")
+dock_filesystem_selected_paths=PackedStringArray("res://Components/Characters/NPCs/Ennemy1/enemy_base.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://Components/", "res://Components/Objects/", "res://Components/Objects/weapon_manager/", "res://Components/Objects/weapon_manager/Bow/", "res://Components/Objects/Upgrades/", "res://Components/Objects/Upgrades/GhostArm/", "res://Components/Characters/", "res://Components/Characters/player/", "res://Components/Characters/NPCs/", "res://Components/Characters/NPCs/Ennemy1/", "res://assets/Models/", "res://assets/Materials/")
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -34,8 +34,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://Components/Objects/weapon_manager/weaponHurtbox.tscn", "res://Components/Objects/weapon_manager/sword/sword.tscn", "res://Components/Objects/Upgrades/GhostArm/GhostArm.tscn", "res://Components/Objects/Upgrades/Upgrade.tscn", "res://Components/Characters/player/Player.tscn", "res://Components/Characters/NPCs/Dummy/Dummy.tscn", "res://Components/Characters/NPCs/Ennemy1/Ennemy1.tscn", "res://Components/Objects/Upgrades/loot_hurtbox.tscn")
-current_scene="res://Components/Objects/Upgrades/GhostArm/GhostArm.tscn"
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://Components/Objects/weapon_manager/weaponHurtbox.tscn", "res://Components/Objects/weapon_manager/sword/sword.tscn", "res://Components/Characters/player/Player.tscn", "res://Components/Characters/NPCs/Dummy/Dummy.tscn", "res://Components/Characters/NPCs/Ennemy1/Enemy1.tscn", "res://Components/Objects/Upgrades/loot_hurtbox.tscn", "res://scenes/parkour_testV1.tscn")
+current_scene="res://Components/Characters/NPCs/Ennemy1/Enemy1.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -43,12 +43,12 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Components/Objects/weapon_manager/Attack.gd", "res://Components/Objects/Upgrades/base_upgrade.gd", "res://Components/Characters/NPCs/Dummy/body_animation.gd", "res://Components/Characters/Character.gd", "res://Components/Characters/NPCs/Dummy/dummy.gd", "res://Components/Characters/NPCs/Ennemy1/ennemy_1.gd", "res://scenes/game.gd", "res://Components/Objects/Upgrades/GhostArm/ghostarm_upgrade.gd", "res://Components/Objects/Upgrades/GhostArm/ghost_arm.gd", "res://Components/Characters/health_component.gd", "res://Components/Characters/hitbox_component.gd", "res://Components/Objects/Upgrades/lootHurtbox.gd", "res://Components/Objects/weapon_manager/MeleeWeapon.gd", "res://Components/Objects/weapon_manager/Animations/model_anim.gd", "res://Components/Characters/player/movement.gd", "res://Components/Characters/player/old_player.gd", "res://Components/Characters/player/player.gd", "res://Components/Objects/Upgrades/upgrade.gd", "res://Components/Objects/weapon_manager/Weapon.gd", "res://Components/Objects/weapon_manager/weapon_hurtbox.gd", "res://Components/Objects/weapon_manager/weapon_manager.gd", "res://Components/Objects/weapon_manager/weapon_resource.gd", "res://Components/Objects/weapon_manager/weapon_type.gd"]
-selected_script="res://Components/Objects/weapon_manager/weapon_manager.gd"
-open_help=["@GDScript", "@GlobalScope", "AnimationPlayer", "bool", "CharacterBody3D", "CollisionObject3D", "float", "GDScript", "Input", "InputEventMouseButton", "Mesh", "Node", "Node3D", "Object", "PackedScene", "RayCast3D", "Resource", "SceneTree", "SceneTreeTimer", "SpringArm3D", "String", "Variant", "Vector3", "VisualInstance3D"]
+open_scripts=["res://Components/Objects/weapon_manager/Attack.gd", "res://Components/Objects/Upgrades/base_upgrade.gd", "res://Components/Characters/NPCs/Dummy/body_animation.gd", "res://Components/Characters/Character.gd", "res://Components/Characters/NPCs/Dummy/dummy.gd", "res://Components/Characters/NPCs/Ennemy1/enemy_base.gd", "res://scenes/game.gd", "res://Components/Objects/Upgrades/GhostArm/ghostarm_upgrade.gd", "res://Components/Objects/Upgrades/GhostArm/ghost_arm.gd", "res://Components/Characters/health_component.gd", "res://Components/Characters/hitbox_component.gd", "res://Components/Objects/Upgrades/lootHurtbox.gd", "res://Components/Objects/weapon_manager/MeleeWeapon.gd", "res://Components/Objects/weapon_manager/Animations/model_anim.gd", "res://Components/Characters/player/movement.gd", "res://Components/Characters/player/old_player.gd", "res://Components/Characters/player/player.gd", "res://Components/Objects/Upgrades/upgrade.gd", "res://Components/Objects/weapon_manager/Weapon.gd", "res://Components/Objects/weapon_manager/weapon_hurtbox.gd", "res://Components/Objects/weapon_manager/weapon_manager.gd", "res://Components/Objects/weapon_manager/weapon_resource.gd", "res://Components/Objects/weapon_manager/weapon_type.gd"]
+selected_script="res://Components/Characters/NPCs/Ennemy1/enemy_base.gd"
+open_help=["@GDScript", "@GlobalScope", "AnimationPlayer", "bool", "CharacterBody3D", "CollisionObject3D", "float", "GDScript", "Input", "InputEventMouseButton", "Mesh", "NavigationAgent3D", "Node", "Node3D", "NodePath", "Object", "PackedScene", "RayCast3D", "Resource", "SceneTree", "SceneTreeTimer", "SpringArm3D", "String", "Variant", "Vector3", "VisualInstance3D"]
 script_split_offset=210
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=0.9285714
 
 [ShaderEditor]
 
@@ -69,11 +69,11 @@ show_search=true
 
 [EditorWindow]
 
-screen=1
+screen=0
 mode="maximized"
-position=Vector2i(1920, 23)
+position=Vector2i(0, 29)
 
 [GameView]
 
-floating_window_rect=Rect2i(1920, 0, 1932, 1127)
-floating_window_screen=1
+floating_window_rect=Rect2i(0, 0, 1932, 1127)
+floating_window_screen=0
