--- a/.godot/editor/script_editor_cache-DESKTOP-BQPLAVA.cfg
+++ b/.godot/editor/script_editor_cache-DESKTOP-BQPLAVA.cfg
@@ -39,7 +39,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
-"scroll_position": 8.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -53,7 +53,7 @@ state={
 "folded_lines": Array[int]([22, 59]),
 "h_scroll_position": 0,
 "row": 96,
-"scroll_position": 0.0,
+"scroll_position": 55.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -215,7 +215,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
-"scroll_position": 0.0,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -326,16 +326,16 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Components/Characters/NPCs/Ennemy1/enemy_base.gd]
+[res://Components/Characters/NPCs/Ennemy1/ennemy_base.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
-"folded_lines": Array[int]([]),
+"column": 21,
+"folded_lines": Array[int]([18]),
 "h_scroll_position": 0,
-"row": 58,
-"scroll_position": 50.0,
+"row": 35,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
