--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -24,12 +24,12 @@ list=[{
 "path": "res://Components/Characters/Character.gd"
 }, {
 "base": &"Character",
-"class": &"Ennemy",
+"class": &"Enemy",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Components/Characters/NPCs/Ennemy1/ennemy_1.gd"
+"path": "res://Components/Characters/NPCs/Ennemy1/enemy_base.gd"
 }, {
 "base": &"BasePlayerUpgrade",
 "class": &"GhostArmUpgrade",
