--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Components/Characters/NPCs/Ennemy1/enemy_base.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://Components/", "res://Components/Objects/", "res://Components/Objects/weapon_manager/", "res://Components/Objects/weapon_manager/Bow/", "res://Components/Objects/Upgrades/", "res://Components/Objects/Upgrades/GhostArm/", "res://Components/Characters/", "res://Components/Characters/player/", "res://Components/Characters/NPCs/", "res://Components/Characters/NPCs/Ennemy1/", "res://assets/Models/", "res://assets/Materials/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://Components/", "res://Components/Objects/", "res://Components/Objects/weapon_manager/", "res://Components/Objects/weapon_manager/Bow/", "res://Components/Objects/Upgrades/", "res://Components/Objects/Upgrades/GhostArm/", "res://Components/Characters/", "res://Components/Characters/player/", "res://Components/Characters/NPCs/", "res://assets/Models/", "res://assets/Materials/")
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
