minor scene change, added mockup face to ennemy

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
+executable_path="D:/OneDrive/Godot_v4.5.1-stable_win64.exe"
 use_advanced_connections=false
 
 [debug_options]
@@ -14,7 +14,7 @@ run_debug_avoidance=false
 
 [linked_properties]
 
-Node3D:scale=false
+Node3D:scale=true
 CharacterBody3D:scale=true
 CollisionShape3D:scale=true
 ShapeCast3D:scale=true
