--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/Models/disguise-glasses.glb")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://Components/", "res://Components/Objects/", "res://Components/Objects/weapon_manager/", "res://Components/Objects/weapon_manager/Bow/", "res://Components/Objects/Upgrades/", "res://Components/Objects/Upgrades/GhostArm/", "res://Components/Characters/", "res://Components/Characters/player/", "res://Components/Characters/NPCs/", "res://assets/", "res://assets/Models/", "res://assets/Materials/")
+dock_filesystem_selected_paths=PackedStringArray("res://Components/Characters/NPCs/Ennemy1/enemy_base.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://Components/", "res://Components/Objects/", "res://Components/Objects/weapon_manager/", "res://Components/Objects/weapon_manager/Bow/", "res://Components/Objects/Upgrades/", "res://Components/Objects/Upgrades/GhostArm/", "res://Components/Characters/", "res://Components/Characters/player/", "res://Components/Characters/NPCs/", "res://Components/Characters/NPCs/Ennemy1/", "res://assets/Models/", "res://assets/Materials/")
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -38,7 +38,7 @@ open_scenes=PackedStringArray("res://scenes/game.tscn", "res://Components/Object
 current_scene="res://Components/Characters/NPCs/Ennemy1/Enemy1.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
@@ -69,11 +69,11 @@ show_search=true
 
 [EditorWindow]
 
-screen=1
+screen=0
 mode="maximized"
-position=Vector2i(1920, 23)
+position=Vector2i(0, 29)
 
 [GameView]
 
-floating_window_rect=Rect2i(1920, 0, 1932, 1127)
-floating_window_screen=1
+floating_window_rect=Rect2i(0, 0, 1932, 1127)
+floating_window_screen=0
