added rotation to enemy movement

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -91,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 10.0,
+"row": 13,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -137,10 +137,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -211,10 +211,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -267,10 +267,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
+"row": 13,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -284,13 +284,9 @@ state={
 "column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 1,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 7,
-"selection_from_line": 3,
-"selection_to_column": 17,
-"selection_to_line": 3,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -331,24 +327,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-<<<<<<< Updated upstream
-"column": 19,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 58,
-"scroll_position": 50.0,
+"row": 32,
+"scroll_position": 17.0,
 "selection": false,
-=======
-"column": 22,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 38,
-"scroll_position": 37.0,
-"selection": true,
-"selection_from_column": 16,
-"selection_from_line": 38,
-"selection_to_column": 22,
-"selection_to_line": 38,
->>>>>>> Stashed changes
 "syntax_highlighter": "GDScript"
 }
