--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://Components/", "res://Components/Objects/", "res://Components/Objects/weapon_manager/", "res://Components/Objects/weapon_manager/Bow/", "res://Components/Objects/Upgrades/", "res://Components/Objects/Upgrades/GhostArm/", "res://Components/Characters/", "res://Components/Characters/player/", "res://Components/Characters/NPCs/", "res://assets/Models/", "res://assets/Materials/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/Models/disguise-glasses.glb")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://Components/", "res://Components/Objects/", "res://Components/Objects/weapon_manager/", "res://Components/Objects/weapon_manager/Bow/", "res://Components/Objects/Upgrades/", "res://Components/Objects/Upgrades/GhostArm/", "res://Components/Characters/", "res://Components/Characters/player/", "res://Components/Characters/NPCs/", "res://assets/", "res://assets/Models/", "res://assets/Materials/")
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -69,11 +69,11 @@ show_search=true
 
 [EditorWindow]
 
-screen=0
+screen=1
 mode="maximized"
-position=Vector2i(0, 29)
+position=Vector2i(1920, 23)
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 1932, 1127)
-floating_window_screen=0
+floating_window_rect=Rect2i(1920, 0, 1932, 1127)
+floating_window_screen=1
