--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -23,6 +23,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Components/Characters/Character.gd"
 }, {
+"base": &"Character",
+"class": &"Enemy",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Components/Characters/NPCs/Ennemy1/enemy_base.gd"
+}, {
 "base": &"BasePlayerUpgrade",
 "class": &"GhostArmUpgrade",
 "icon": "",
